<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:background="@drawable/fondo_apk_euroliga"
    tools:context=".crear_cuenta.CrearCuentaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logo_login_euroliga"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo_euroliga" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campo_usuario_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_campo_usuario"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_usuario_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campo_usuario_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="julen_fuentes"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campo_contraseña_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_campo_contraseña"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_contrasena_24dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campo_contraseña_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="patata123"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campo_repetir_contraseña_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_campo_repetir_contraseña"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_contrasena_24dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campo_repetir_contraseña_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="patata123"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/boton_crear_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/crear_cuenta" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>